Fix rendering of settings dialog on mobile

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -470,6 +470,10 @@ h2 span, h2 small {
     }
 }
 
+.make-thinner {
+    padding-right: -15px;
+}
+
 /* */
 /* Mobile layout */
 /* */
